--- a/redirector.html
+++ b/redirector.html
@@ -4,8 +4,10 @@
 <head>
 	<script src="//cdn.8thwall.com/web/iframe/iframe.js"></script>
 	<title>Body Computer Leakage</title>
-	<meta name="description" content="Our first page">
-	<meta name="keywords" content="html tutorial template">
+	<link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
+	<link rel="manifest" href="./favicon/site.webmanifest">
 </head>
 
 <body style="background: black;">
