--- a/index.html
+++ b/index.html
@@ -13,9 +13,20 @@
 <body style="background: black;">
 	<div id="mainContainer">
 		<p>Body Computer Leakage</p>
-		<button class="myButton">begin bitches</button>
+		<button onclick="kat()" class="myButton">begin bitches</button>
 	</div>
-</body>
 
+
+	<script>
+
+
+		function kat() {
+			const filterArray = ['atextr', 'btextr', 'ctextr', 'dtextr', 'etextr', 'ftextr', 'gtextr', 'htextr']
+			var randomFilterIndex = Math.floor(Math.random() * 8)
+			var randomFilter = 'https://' + filterArray[randomFilterIndex] + '.bodycomputerleakage.xyz/'
+			window.location = randomFilter
+		}
+	</script>
+</body>
 
 </html>
