--- a/redirector.html
+++ b/redirector.html
@@ -11,7 +11,9 @@
 </head>
 
 <body style="background: black;">
-	<video id='currentVideo' controls="" width="90%" autoplay="" src="" type="video/mp4" class="media-document mac video"></video>
+	<div id="mainContainer">
+		<video id='currentVideo' width="100%" autoplay="" src="" type="video/mp4" class="media-document mac video"></video>
+	</div>
 	<script>
 		var v = document.getElementById('currentVideo');
 		const videoArray = ['a.mp4', 'b.mp4', 'c.mp4', 'd.mp4', 'e.mp4', 'f.mp4', 'g.mp4', 'h.mp4', 'i.mp4', 'j.mp4', 'k.mp4', 'l.mp4', 'm.mp4', 'n.mp4', 'o.mp4', 'p.mp4', 'q.mp4', 'r.mp4', 's.mp4', 't.mp4', 'u.mp4', 'v.mp4']
