--- a/redirector.html
+++ b/redirector.html
@@ -12,7 +12,7 @@
 
 <body style="background: black;">
 	<div id="mainContainer">
-		<video id='currentVideo' width="100%" autoplay="" src="" type="video/mp4" class="media-document mac video"></video>
+		<video id='currentVideo' controls="" width="100%" autoplay="" src="" type="video/mp4" class="media-document mac video"></video>
 	</div>
 	<script>
 		var v = document.getElementById('currentVideo');
