--- a/redirector.html
+++ b/redirector.html
@@ -11,8 +11,8 @@
 </head>
 
 <body style="background: black;">
-	<div id="mainContainer">
-		<video id='currentVideo' controls="" width="100%" autoplay="" src="" type="video/mp4" class="media-document mac video"></video>
+	<div id="otherContainer">
+		<video id='currentVideo' width="90%" autoplay="" src="" type="video/mp4" controls="" class="media-document mac video"></video>
 	</div>
 	<script>
 		var v = document.getElementById('currentVideo');
