gtextr back in biz

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<script>
 		// function redirects window to one of the AR filters
 		function kat() {
-			const filterArray = ['atextr', 'btextr', 'ctextr', 'dtextr', 'etextr', 'ftextr', 'htextr']
+			const filterArray = ['atextr', 'btextr', 'ctextr', 'dtextr', 'etextr', 'ftextr', 'gtextr','htextr']
 			var randomFilterIndex = Math.floor(Math.random() * 7)
 			var randomFilter = 'https://' + filterArray[randomFilterIndex] + '.bodycomputerleakage.xyz/'
 			window.location = randomFilter
