--- a/redirector.html
+++ b/redirector.html
@@ -21,7 +21,7 @@
 		var videoURL = 'https://bodycomputerleakage.s3-us-west-1.amazonaws.com/bcl_vids/' + videoArray[randomVideoIndex]
 		v.src = videoURL
 
-		const filterArray = ['atextr', 'btextr', 'ctextr', 'dtextr', 'etextr', 'ftextr', 'htextr']
+		const filterArray = ['atextr', 'btextr', 'ctextr', 'dtextr', 'etextr', 'ftextr', 'gtextr','htextr']
 		var randomFilterIndex = Math.floor(Math.random() * 7)
 		var randomFilter = 'https://' + filterArray[randomFilterIndex] + '.bodycomputerleakage.xyz/'
 
