--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<div id="mainContainer">
 		<p>Body Computer Leakage</p>
 		<button onclick="kat()" class="myButton">begin bitches</button>
+		<h4>by Kathi Schulz</h4>
 	</div>
 
 
